--- a/index.html
+++ b/index.html
@@ -19,53 +19,62 @@
   </head>
   <body>
     <div class="main">
-      <h1 id="leveltitle">Adjust the Neural Network</h1>
-      <p id="description"></p>
-      <svg>
-        <g id="input">
-          <g class="parameters"></g>
-          <g class="activations"></g>
-          <g class="values"></g>
-        </g>
-        <g id="outputs">
-          <g class="flow"></g>
-          <g class="target"></g>
-          <g class="values"></g>
-        </g>
-        <g id="edges">
-          <g class="edges"></g>
-          <g class="activations"></g>
-          <g class="gradient"></g>
-          <g class="parameters"></g>
-          <g class="normalized-parameters"></g>
-        </g>
-        <g id="nodes">
-          <g class="nodes"></g>
-          <g class="gradient"></g>
-          <g class="parameters"></g>
-        </g>
-        <g id="tooltip"></g>
-      </svg>
-      <div style="display:flex;"></div>
-      <div>
-        <h3>Training Data (click on row to select as input)</h3>
-        <table style="border-collapse: collapse;" id="trainingtable"></table>
-      </div>
-      <div>
-        <h3>Total error on training data</h3>
-        <p>
-          <div id="totalerror"></div>
-        </p>
-        <p>
-          <input type="checkbox" id="showgradient">
-          <label for="showgradient">show negative gradient of loss function</label>
-        </p>
-        <p>
-          <button id="gradientdescent">Adjust parameters with gradient descent</button>
-        </p>
-        <p>
-          <button id="gradientdescent100">Adjust parameters with 100 gradient descent steps</button>
-        </p>
+      <div id="main">
+        <div class="network">
+          <div class="text">
+            <h1 id="leveltitle">Adjust the Neural Network</h1>
+            <p id="description"></p>
+          </div>
+          <svg>
+            <g id="input">
+              <g class="parameters"></g>
+              <g class="activations"></g>
+              <g class="values"></g>
+            </g>
+            <g id="outputs">
+              <g class="flow"></g>
+              <g class="target"></g>
+              <g class="values"></g>
+            </g>
+            <g id="edges">
+              <g class="edges"></g>
+              <g class="activations"></g>
+              <g class="gradient"></g>
+              <g class="parameters"></g>
+              <g class="normalized-parameters"></g>
+            </g>
+            <g id="nodes">
+              <g class="nodes"></g>
+              <g class="gradient"></g>
+              <g class="parameters"></g>
+            </g>
+            <g id="tooltip"></g>
+          </svg>
+        </div>
+        <div class="training">
+          <div class="helper">
+            <p>
+              <input type="checkbox" id="showgradient">
+              <label for="showgradient">show negative gradient of loss function</label>
+            </p>
+            <p>
+              <button id="gradientdescent">Adjust parameters with gradient descent</button>
+            </p>
+            <p>
+              <button id="gradientdescent100">Adjust parameters with 100 gradient descent steps</button>
+            </p>
+          </div>
+          <div class="data">
+            <h3>Training Data (click on row to select as input)</h3>
+            <table style="border-collapse: collapse;" id="trainingtable"></table>
+            <div>
+              <h3>Total error on training data</h3>
+              <p>
+                <div id="totalerror"></div>
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="footer">
