--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <g class="edges"></g>
             <g class="activations"></g>
             <g class="gradient"></g>
+            <g class="normalized-gradient"></g>
             <g class="parameters"></g>
             <g class="normalized-parameters"></g>
           </g>
