proper buttons usage

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
           </div>
           <div class="h-seperator"></div>
           <div style="flex:1;">Train with gradient descent
-            <div class="controls"><a class="reset" href="#2" title="reset training"></a><a class="pause-resume pause" href="#2" title="pause/resume training (Adjust parameters with 100 gradient descent steps)" id="gradientdescentanimate"></a><a class="single-step" href="#2" title="train a single step (Adjust parameters with gradient descent)" id="gradientdescent"></a></div>
+            <div class="controls">
+              <div class="reset" title="reset training"></div>
+              <div class="pause-resume pause" title="pause/resume training (continious gradient descent steps)"></div>
+              <div class="single-step" title="train a single step (Adjust parameters with gradient descent)"></div>
+            </div>
           </div>
         </div>
         <div class="box">
