Split edges in multiple Bezier splines

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <g class="normalized-gradient"></g>
             <g class="parameters"></g>
             <g class="normalized-parameters"></g>
+            <g class="factorlines"></g>
           </g>
           <g id="nodes">
             <g class="nodes"></g>
