--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <g class="values"></g>
           </g>
           <g id="tooltip"></g>
+          <g id="levelinfo"></g>
         </svg>
         <div class="icon" id="helpmebutton"></div>
       </div>
@@ -66,7 +67,7 @@
             </div>
           </div>
         </div>
-        <div class="box">
+        <div class="box trainingdata visible">
           <h3>Training Data</h3>
           <table id="trainingtable"></table>
           <div class="v-seperator"></div>
