Further adjusted right menu

--- a/index.html
+++ b/index.html
@@ -80,12 +80,15 @@
           </div>
         </div>
         <div class="box trainingdata visible">
-          <h3>Training Data</h3>
-          <table id="trainingtable"></table>
+          <div>
+            <p style="font-weight:600;">Training Data</p>
+          </div>
+          <div>
+            <table id="trainingtable"></table>
+          </div>
           <div class="v-seperator"></div>
           <div>
-            <h3>Total error on training data</h3>
-            <p>Value of the loss function (to be minimized):</p>
+            <p>Total error on training data (loss function):</p>
             <div class="center-formula">
               <p id="totalerror"></p>
               <p class="formula"><span> = </span><span id="totalerrorterm"></span></p>
