--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
         <div class="text">
           <h1 id="leveltitle">Adjust the Neural Network</h1>
         </div>
-        <svg viewBox="100 100 900 900">
+        <svg>
           <g id="input">
-            <g class="parameters"></g>
             <g class="activations"></g>
           </g>
           <g id="outputs">
@@ -35,15 +34,18 @@
             <g class="edges"></g>
             <g class="activations"></g>
             <g class="gradient"></g>
-            <g class="parameters"></g>
             <g class="factorlines"></g>
           </g>
           <g id="nodes">
             <g class="nodes"></g>
-            <g class="parameters"></g>
             <g class="gradient"></g>
             <g class="target"></g>
             <g class="values"></g>
+          </g>
+          <g id="parameters">
+            <g class="input"></g>
+            <g class="edges"></g>
+            <g class="nodes"></g>
           </g>
           <g id="tooltip"></g>
           <g id="levelinfo"></g>
