--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <div>
             <table id="trainingtable"></table>
           </div>
-          <div class="v-seperator"></div>
+          <!--.v-seperator-->
           <div>
             <p>Total error on training data (loss function):</p>
             <div class="center-formula">
