--- a/index.html
+++ b/index.html
@@ -100,13 +100,16 @@
       </div>
       <div id="screenoverlay"></div>
       <div class="credits">
-        <p>Icons made by <a href="https://www.flaticon.com/authors/bqlqn" title="bqlqn">bqlqn</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></p>
+        <!--p Icons made by <a href="https://www.flaticon.com/authors/bqlqn" title="bqlqn">bqlqn</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a>-->
+        <p>Icons made by bqlqn from www.flaticon.com</p>
         <p>
           This site was created by IMAGINARY, a travelling exhibition that shows mathematics can be beautiful,
           interactive, something you can touch, or a way to express your emotions beyond what words can achieve.
           It has visited over 55 countries since 2007.
         </p>
-        <p><a href="http://about.imaginary.org">Learn more about IMAGINARY</a></p>
+        <p>
+          <!--a(href='http://about.imaginary.org') Learn more about IMAGINARY-->Find out more about IMAGINARY at https://about.imaginary.org
+        </p>
       </div>
     </div>
     <div class="footer">
