Hide buttons that are non functional yet.

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
       <div class="footerbox">
         <div class="button" id="nextbutton">Next Level</div>
       </div>
-      <div class="footerbox" style="flex:0">
-        <div class="icon" id="creditsbutton"></div>
-        <div class="icon" id="internationalbutton"></div>
-      </div>
+      <!--.footerbox(style="flex:0")
+      //#creditsbutton.icon
+      //#internationalbutton.icon
+      -->
     </div>
     <script type="text/javascript" src="src/js/d3.js"></script>
     <script type="module" src="src/js/main.js">//TODO: browserfy</script>
