Reactivate gulp build system

--- a/index.html
+++ b/index.html
@@ -131,7 +131,6 @@
       //#internationalbutton.icon
       -->
     </div>
-    <script type="text/javascript" src="src/js/d3.js"></script>
-    <script type="module" src="src/js/main.js">//TODO: browserfy</script>
+    <script type="module" src="assets/js/bundle.min.js"></script>
   </body>
 </html>
