--- a/index.html
+++ b/index.html
@@ -5,24 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta property="og:url" content="">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Simple Networks">
+    <meta property="og:title" content="Einfache Netze">
     <meta property="og:image" content="">
-    <meta name="description" content="Adjust your neural network.">
-    <meta property="og:description" content="Adjust your neural network.">
+    <meta name="description" content="Passe das Neuronale Netzwerk an.">
+    <meta property="og:description" content="Passe das Neuronale Netzwerk an.">
     <link rel="icon" type="image/png" href="assets/img/favicon.png">
     <!--link(href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700", rel="stylesheet")-->
     <!--link(href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700", rel="stylesheet")-->
     <!--link(rel="stylesheet", href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css", integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T", crossorigin="anonymous")-->
     <link rel="stylesheet" href="assets/fonts/typeface-roboto/index.css" type="text/css">
     <link rel="stylesheet" href="assets/css/default.css" media="all" type="text/css">
-    <title>Simple Networks
+    <title>Einfache Netze
     </title>
   </head>
   <body>
     <div class="main">
       <div class="network">
         <div class="text">
-          <h1 id="leveltitle">Adjust the Neural Network</h1>
+          <h1 id="leveltitle">Passe das Neuronale Netzwerk an</h1>
         </div>
         <svg>
           <g id="input">
