Add build results

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
       //#internationalbutton.icon
       -->
     </div>
-    <script type="module" src="assets/js/bundle.min.js"></script>
+    <script src="assets/js/dependencies.min.js"></script>
+    <script src="assets/js/bundle.min.js"></script>
   </body>
 </html>
