Add level number to level title

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="main">
       <div class="network">
         <div class="text">
-          <h1 id="leveltitle">Passe das Neuronale Netzwerk an</h1>
+          <h1><span id="leveltitleprefix"></span><span id="leveltitle">Passe das Neuronale Netzwerk an</span></h1>
         </div>
         <svg>
           <g id="input">
