Remove labels from navigation buttons

--- a/index.html
+++ b/index.html
@@ -118,13 +118,13 @@
       <!--  a#backbutton.navbutton Previous Level-->
       <!--  a#nextbutton.navbutton Next Level-->
       <div class="footerbox">
-        <div class="button" id="backbutton">Voriges Level</div>
+        <div class="button" id="backbutton"></div>
       </div>
       <div class="footerbox">
         <div class="circles" id="navcircles"><a class="circ selected" href="index.html#1"></a><a class="circ" href="index.html#2"></a><a class="circ" href="index.html#3"></a><a class="circ" href="index.html#4"></a></div>
       </div>
       <div class="footerbox">
-        <div class="button" id="nextbutton">Nächstes Level</div>
+        <div class="button" id="nextbutton"></div>
       </div>
       <!--.footerbox(style="flex:0")
       //#creditsbutton.icon
