Disable "next" button until level is soved
The implementation is quite dirty. Doing it properly would require quite
some refactoring.

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="circles" id="navcircles"><a class="circ selected" href="index.html#1"></a><a class="circ" href="index.html#2"></a><a class="circ" href="index.html#3"></a><a class="circ" href="index.html#4"></a></div>
       </div>
       <div class="footerbox">
-        <div class="button" id="nextbutton"></div>
+        <div class="button disable" id="nextbutton"></div>
       </div>
       <!--.footerbox(style="flex:0")
       //#creditsbutton.icon
